swagger, route and controller  modified for geo APIs
